...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/textEditor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clickable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

...
            android:gravity="center"
            android:text="@string/underlined_u"
            android:textColor="@color/black_cstm"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/highlight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_editor_button_unpressed"
            android:clickable="true"
            android:gravity="center"
...
